- Generics cleanup.